feat: add cloud provider struct
